--- a/index.html
+++ b/index.html
@@ -50,6 +50,34 @@
       .nav-links ul {
         list-style: none;
       }
+
+      .body {
+        margin-top: 100px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      .photo {
+        margin-left: 5rem;
+      }
+      .text {
+        width: 40rem;
+        margin-left: 8rem;
+      }
+      .text h1 {
+        color: rgb(73 75 87);
+        padding: 20px;
+        font-size: 25px;
+        font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+          "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+      }
+      .text h3 {
+        color: rgb(73 75 87);
+        padding: 20px;
+        font-size: 17px;
+        font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+          "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+      }
     </style>
   </head>
   <body>
