--- a/index.html
+++ b/index.html
@@ -78,6 +78,28 @@
         font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
           "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
       }
+
+      .main-container-last {
+        color: rgb(83, 79, 79);
+        margin-top: 10rem;
+        margin-left: 5rem;
+      }
+      .main-container-last h1 {
+        margin-left: 50px;
+      }
+      .container {
+        display: flex;
+        margin: 50px;
+      }
+      .sub-container {
+        width: 600px;
+      }
+      .sub-container p {
+        width: 200px;
+        font-size: 20px;
+        font-weight: 600;
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      }
     </style>
   </head>
   <body>
@@ -118,6 +140,39 @@
             with the capital, network connections and most importantly, the
             advice they need to transform the Web3 landscape in India.
           </h3>
+        </div>
+      </div>
+      <div class="main-container-last">
+        <h1>Why it Matters?</h1>
+        <div class="container">
+          <div class="sub-container">
+            <img
+              src="https://s3.ap-southeast-1.amazonaws.com/files.coinswitch.co/images/partnership.svg"
+              alt="First Image"
+            />
+            <p>Partnership with India’s largest wealth tech destination</p>
+          </div>
+          <div class="sub-container">
+            <img
+              src="https://s3.ap-southeast-1.amazonaws.com/files.coinswitch.co/images/network.svg"
+              alt="Second Image"
+            />
+            <p>Access to a network of 70+ global venture capital partners</p>
+          </div>
+          <div class="sub-container">
+            <img
+              src="https://s3.ap-southeast-1.amazonaws.com/files.coinswitch.co/images/capital.svg"
+              alt="Third Image"
+            />
+            <p>Capital infusion up to $250,000</p>
+          </div>
+          <div class="sub-container">
+            <img
+              src="https://s3.ap-southeast-1.amazonaws.com/files.coinswitch.co/images/mentorship.svg"
+              alt="Fourth Image"
+            />
+            <p>Mentorship from in-house experts</p>
+          </div>
         </div>
       </div>
     </div>
